Crear archivo styles.css con estilos iniciales y paleta de colores definida Cambiar referencia de normalize.css en contact.html

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 <span id="minas-restantes">10</span>
             </div>
             
-            <button id="btn-reiniciar" class="btn-reiniciar">
-                🙂
-            </button>
+            <button id="btn-reiniciar" class="btn-reiniciar">🙂</button>
             
             <div class="temporizador">
                 <span>Tiempo: </span>
