Desarrollar lógica principal del juego y selector de dificultad - Se crea estructura de datos del tablero y celdas - Se implementa la generación aleatoria de minas - Se añade la mecánica de click izquierdo (revelar celda)  y click derecho (marcar bandera) - Se establecen condiciones de victoria y derrota - Se incorpora un selector de dificultad (facil, medio, dificil) - Se aplican estilos visuales varios

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     </header>
 
     <main>
+        <section id="dificultad-container">
+            <label for="selector-dificultad"><strong>Dificultad:</strong></label>
+            <select id="selector-dificultad">
+                <option value="facil">Fácil (8x8, 10 minas)</option>
+                <option value="media">Media (12x12, 25 minas)</option>
+                <option value="dificil">Difícil (16x16, 50 minas)</option>
+            </select>
+        </section>
+
+        <div id="nombre-jugador-container"></div>
         <section class="game-info">
             <div class="contador-minas">
                 <span>Minas: </span>
